# echo-v1-backend

./: .dockerignore  .env  .env_example  .gitignore  Dockerfile  README.md  build_files.sh  pyproject.toml  requirements.txt  sdk_info.txt  test_gemini_tts.py  test_offline_extraction.py  test_wav_gen.py
core/: asgi.py  celery.py  constants.py  custom_auth.py  db.sqlite3  mail.py  middleware.py  model.py  urls.py  viewset.py  wsgi.py
doc/: ARCHITECTURE.md  PRD.md  PROJECT_OVERVIEW.md
media/: .gitkeep
notification/: admin.py  utils.py
ocr_app/: admin.py  models.py  serializers.py  services.py  tests.py  translation_manager.py  translation_services.py  urls.py  views.py
payment/: choices.py  serializers.py  urls.py  utils.py  views.py
performance/: async_processor.py  cache_service.py  celery_tasks.py  connection_pool.py  enhanced_api_views.py  image_optimizer.py  language_detector.py  urls.py  views.py
realtime/: apps.py  consumers.py  middleware.py
stats_app/: apps.py  urls.py  views.py
translation/: __init__.py  admin.py  apps.py  choices.py  cloud_storage.py  document_processors.py  models.py  orchestrator.py  serializers.py  services.py  signals.py  tasks.py  tests.py  tests_general.py  tests_signals.py
users/: admin.py  choices.py  manager.py  permission.py  services.py  tests.py  utils.py
users_/: admin.py  models.py  serializers.py  urls.py  views.py
utils/: error_handler.py
voice_translator/: admin.py  choices.py  cloud_storage.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
wallet/: choices.py  models.py  urls.py  (+2 more)
(+74 files in other folders)
